# cowchess

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  GUI.cpp  GUI.h  King.cpp  King.h  Makefile  Mouse.cpp  Mouse.h  Move.cpp  Move.h  Piece.cpp  Piece.h  README.md  Rook.cpp  Rook.h  constants.h  main.cpp  slask.txt
debian/doc/: cowchess.1
headers/: AI.h  AIMove.h  Bishop.h  Board.h  GUI.h  King.h  Knight.h  LastMove.h  Mouse.h  Move.h  Pawn.h  Piece.h  Player.h  Queen.h  Rook.h  Touch.h  constants.h
img/: bgwood.xpm  bishop_b.xpm  bishop_w.xpm  king_b.xpm  king_w.xpm  knight_b.xpm  knight_w.xpm  pawn_b.xpm  pawn_w.xpm  piece.xpm  piece_b.xpm  piece_w.xpm  queen_b.xpm  queen_w.xpm  rook_b.xpm  rook_w.xpm  text_check.xpm  text_checkmate.xpm  text_draw.xpm  text_turn.xpm
source/: AI.cpp  AIMove.cpp  Bishop.cpp  Board.cpp  GUI.cpp  King.cpp  Knight.cpp  LastMove.cpp  Mouse.cpp  Move.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Rook.cpp  Touch.cpp  main.cpp
